--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -55,6 +55,13 @@
         <enum>QLayout::SetDefaultConstraint</enum>
        </property>
        <item>
+        <widget class="QProgressBar" name="questProgress">
+         <property name="value">
+          <number>24</number>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QListWidget" name="questList"/>
        </item>
       </layout>
