--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,6 +76,22 @@
          </layout>
         </widget>
        </item>
+       <item>
+        <widget class="QGroupBox" name="statusBox">
+         <property name="title">
+          <string>Status</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="QLabel" name="locationLabel">
+            <property name="text">
+             <string>Location: Main Menu</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
